---
source: src/format.rs
expression: "format_str(indoc!\n{\n    r#\"\n        \t{\n                foo <- c(1,2,\n                3)\n                # fmt: skip\n                bar <- c(1,2,\n                3)\n                foo <- c(1,2,\n                3) # fmt: skip\n                bar <- c(1,2,\n                3)\n            }\n        \"#\n}).unwrap()"
---
{
  foo <- c(
    1,
    2,
    3
  )
  # fmt: skip
  bar <- c(1,2,
       3)
  foo <- c(1,2,
       3) # fmt: skip
  bar <- c(
    1,
    2,
    3
  )
}
